add schema to package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "node-package-template",
   "license": "Apache-2.0",
   "types": "esm/index.d.ts",
