tweak ts config

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,25 +2,27 @@
   "compilerOptions": {
     "alwaysStrict": true,
     "declaration": true,
-    "declarationMap": true,
     "downlevelIteration": true,
-    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
+    "inlineSourceMap": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "moduleResolution": "node",
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
+    "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "resolveJsonModule": true,
-    "sourceMap": true,
     "strict": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
+    "stripInternal": true,
     "target": "ES2020",
     "typeRoots": ["node_modules/@types"],
     "useDefineForClassFields": true
