--- a/package.json
+++ b/package.json
@@ -25,25 +25,13 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
     "conditional-type-checks": "^1.0.5",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-regexp": "^0.1.1",
-    "eslint-plugin-sort-destructure-keys": "^1.3.5",
-    "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "eslint-plugin-tsdoc": "^0.2.7",
-    "eslint-plugin-typescript-sort-keys": "^1.5.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.0-beta"
   },
   "jest": {
     "cache": false,
@@ -71,7 +59,7 @@
   },
   "scripts": {
     "clean": "rm -rf cjs esm node_modules",
-    "lint": "eslint '{example,src}/**/*' --fix",
+    "lint": "prettier --write '{example,src}/**/*'",
     "test": "jest --coverage",
     "build": "tsc -P tsconfig.cjs.json & tsc -P tsconfig.esm.json",
     "example": "ts-node example"
