--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,3 @@
-# Logs
-logs
-*.log
-log.txt
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-# runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-*.tmp
-*.tmp.*
-
-# test coverage
-coverage
-
-# dependency directories
-node_modules
-jspm_packages
-
-# TypeScript cache
-*.tsbuildinfo
-
-# optional npm cache directory
-.npm
-
-# optional eslint cache
-.eslintcache
-
-# etc. cache
-.cache
-
-# output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-yarn-lock
-
-# dotenv environment variables file
-.env
-.env.test
-
-# output
-lib
-dist
-prod
-build
-esm
-pkg
-cjs
-.cdk.staging
-cdk.out
-.build
-
-# OS
-$RECYCLE.BIN
-.DS_Store
-Thumbs.db
-UserInterfaceState.xcuserstate
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-nbproject
+*
+!(.github|.vscode|docs|example|src)
+!(.editorconfig|.gitignore|.npmignore|.prettierrc|CODE_OF_CONDUCT.md|LICENSE|package.json|package-lock.json|README.md|tsconfig.*)
