--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/package",
   "name": "package-name",
+  "version": "0.1.0",
   "license": "Apache-2.0",
   "types": "esm/index.d.ts",
   "module": "esm/index.js",
@@ -27,6 +28,7 @@
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.0-beta"
@@ -60,6 +62,7 @@
     "format": "prettier --write '{example,src}/**/*'",
     "test": "jest --coverage",
     "build": "tsc -P tsconfig.cjs.json & tsc -P tsconfig.esm.json",
+    "version": "standard-version",
     "example": "ts-node example"
   }
 }
