formatting pre commit

--- a/package.json
+++ b/package.json
@@ -51,12 +51,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run format && npm run build && npm run test"
+      "pre-commit": "npm run format",
+      "pre-push": "npm run build && npm run test"
     }
   },
   "scripts": {
     "clean": "rm -rf cjs esm node_modules",
-    "format": "prettier --write '{example,src}/**/*'",
+    "format": "prettier --write .",
     "test": "jest --coverage",
     "build": "tsc -P tsconfig.cjs.json & tsc -P tsconfig.esm.json",
     "release": "standard-version",
