--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "scripts": {
     "clean": "rm -rf cjs esm node_modules",
-    "format": "prettier --write . --loglevel error",
+    "format": "prettier --write '{*.(json|md),src/**}' --loglevel error",
     "test": "jest --coverage",
     "build": "tsc -P tsconfig.cjs.json & tsc -P tsconfig.esm.json",
     "release": "standard-version",
