--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,7 +24,7 @@
     "strictPropertyInitialization": true,
     "stripInternal": true,
     "target": "ES2020",
-    "typeRoots": ["@types"],
+    "typeRoots": ["node_modules/@types"],
     "useDefineForClassFields": true
   },
   "exclude": ["node_modules"],
