--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run format",
-      "pre-push": "npm run build && npm run test"
+      "pre-push": "npm run test --bail && npm run build"
     }
   },
   "scripts": {
