--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,12 +24,19 @@
     "editor.formatOnSave": true
   },
   "[markdown]": {
-    "editor.wordWrap": "on",
-    "editor.quickSuggestions": false,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "editor.quickSuggestions": true,
+    "editor.suggest.showReferences": true,
+    "editor.wordWrap": "on"
   },
   "deno.enable": false,
   "editor.tabSize": 2,
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "files.exclude": {
+    "**/node_modules": true
+  },
+  "files.watcherExclude": {
+    "**/node_modules": true
+  }
 }
