--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
   "description": "",
   "repository": "github:harrysolovay/package-name",
   "keywords": [],
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
     "conditional-type-checks": "^1.0.5",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.0-beta"
+    "typescript": "^4.1.2"
   },
   "jest": {
     "cache": false,
