disable emit from ide-only tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "module": "CommonJS"
+    "module": "CommonJS",
+    "noEmit": true
   },
   "extends": "./tsconfig.base.json"
 }
