--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,20 @@
 name: Test
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    branches: "*"
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, macos-latest]
+        node-version: [10.x, 12.x, 13.x, 14.x]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: "12.x"
+          node-version: ${{matrix.node-version}}
       - run: npm ci
+      - run: yarn check
       - run: yarn test
-      - run: yarn build
