--- a/package.json
+++ b/package.json
@@ -16,51 +16,33 @@
     "esm"
   ],
   "description": "",
-  "repository": "github:harrysolovay/package-name",
+  "repository": {
+    "directory": ".",
+    "type": "git",
+    "url": "https://github.com/harrysolovay/package-name"
+  },
   "keywords": [],
-  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
     "conditional-type-checks": "^1.0.5",
-    "husky": "^4.3.0",
+    "husky": "^5.1.3",
     "jest": "^26.6.3",
-    "prettier": "^2.2.0",
-    "standard-version": "^9.0.0",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
-  },
-  "jest": {
-    "cache": false,
-    "globals": {
-      "ts-jest": {
-        "diagnostics": true,
-        "tsconfig": "tsconfig.json"
-      }
-    },
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/*.test.ts",
-      "**/tests/**/*"
-    ],
-    "testPathIgnorePatterns": [
-      "node_modules"
-    ],
-    "verbose": false
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format",
-      "pre-push": "npm run test --bail && npm run build"
-    }
+    "npm-check-updates": "^11.1.10",
+    "prettier": "^2.2.1",
+    "standard-version": "^9.1.1",
+    "ts-jest": "^26.5.3",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "scripts": {
-    "clean": "rm -rf cjs esm node_modules",
-    "format": "prettier --write . --ignore=node_modules --loglevel=error",
     "test": "jest",
-    "build": "tsc -P tsconfig.cjs.json & tsc -P tsconfig.esm.json",
+    "build": "tsc & tsc -P tsconfig.esm.json",
+    "clean": "rm -rf cjs esm",
+    "format": "prettier --write . --ignore=node_modules",
+    "rm-pkgs-and-locks": "rm -rf node_modules package-lock.json",
+    "update-deps": "npm run rm-pkgs-and-locks && ncu -u && npm i",
+    "check": "tsc --noEmit",
     "release": "standard-version",
     "release-next": "npm run release -- --prerelease next",
     "example": "ts-node example"
