--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "ES2020",
     "outDir": "esm"
   },
-  "extends": "./tsconfig.build.json"
+  "extends": "./tsconfig.json"
 }
