--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
+    "prepare": "husky install",
     "test": "jest",
     "build": "tsc & tsc -P tsconfig.esm.json",
     "clean": "rm -rf cjs esm",
