--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "build": "tsc & tsc -P tsconfig.esm.json",
     "clean": "rm -rf cjs esm",
     "format": "prettier --write . --ignore=node_modules",
-    "rm-pkgs-and-locks": "rm -rf node_modules package-lock.json",
-    "update-deps": "npm run rm-pkgs-and-locks && ncu -u && npm i",
+    "rm-pkgs": "rm -rf node_modules",
+    "rm-pkgs-and-lock": "rm -rf node_modules package-lock.json",
+    "update-deps": "npm run rm-pkgs-and-lock && ncu -u && npm i",
     "check": "tsc --noEmit",
     "release": "standard-version",
     "release-next": "npm run release -- --prerelease next",
