--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-/*
-!.husky
-!.github
-!.prettierrc
-!.vscode
-!CHANGELOG.md
-!CODE_OF_CONDUCT.md
-!CONTRIBUTING.md
-!jest.config.ts
-!example
-!LICENSE
-!package.json
-!package-lock.json
-!README.md
-!src
-!tsconfig*.json
+cjs
+esm
+node_modules
