--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,13 +2,27 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
-      "request": "launch",
-      "name": "Launch via NPM",
-      "runtimeExecutable": "npm",
-      "runtimeArgs": ["run", "debug"],
+      "name": "launch-via-npm",
       "port": 9229,
-      "skipFiles": ["<node_internals>/**"]
+      "request": "launch",
+      "runtimeArgs": ["run", "debug"],
+      "runtimeExecutable": "npm",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node"
+    },
+    {
+      "args": ["--runInBand"],
+      "cwd": "${workspaceRoot}",
+      "disableOptimisticBPs": true,
+      "internalConsoleOptions": "neverOpen",
+      "name": "vscode-jest-tests",
+      "program": "${workspaceRoot}/node_modules/.bin/jest",
+      "request": "launch",
+      "runtimeExecutable": "node",
+      "skipFiles": ["<node_internals>/**", "${workspaceRoot}/node_modules/**"],
+      "sourceMaps": true,
+      "stopOnEntry": true,
+      "type": "node"
     }
   ]
 }
