--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
   "deno.enable": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "markdownlint.config": {
+    "no-blanks-blockquote": false,
+    "fenced-code-language": false,
+    "no-inline-html": false
+  }
 }
