--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "standard-version": "^9.3.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
+    "typedoc": "^0.20.37",
+    "typedoc-plugin-markdown": "^3.9.0",
     "typescript": "^4.3.3"
   },
   "scripts": {
