--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "conditional-type-checks": "^1.0.5",
