--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     },
     "keywords": [],
     "devDependencies": {
+        "@swc-node/register": "^1.3.5",
+        "@swc/jest": "^0.2.4",
         "@trivago/prettier-plugin-sort-imports": "^2.0.4",
         "@types/jest": "^27.0.2",
         "@types/node": "^16.10.1",
@@ -32,8 +34,7 @@
         "npm-check-updates": "^11.8.5",
         "prettier": "^2.4.1",
         "standard-version": "^9.3.1",
-        "ts-jest": "^27.0.5",
-        "ts-node": "^10.2.1",
+        "tslib": "^2.3.1",
         "typedoc": "^0.22.4",
         "typedoc-plugin-markdown": "^3.11.1",
         "typescript": "^4.4.3"
@@ -50,6 +51,6 @@
         "check": "tsc --noEmit",
         "release": "standard-version",
         "release-next": "npm run release -- --prerelease next",
-        "example": "ts-node example"
+        "example": "node -r @swc-node/register example"
     }
 }
