--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "@types/jest": "^27.0.2",
         "@types/node": "^16.10.1",
         "conditional-type-checks": "^1.0.5",
-        "husky": "^7.0.2",
         "jest": "^27.2.1",
         "npm-check-updates": "^11.8.5",
         "prettier": "^2.4.1",
@@ -40,13 +39,11 @@
         "typescript": "^4.4.3"
     },
     "scripts": {
-        "prepare": "husky install",
         "test": "jest",
         "build": "tsc & tsc -P tsconfig.esm.json",
         "clean": "rm -rf cjs esm",
-        "format": "prettier --write . --ignore-path=node_modules/**",
         "rm-pkgs": "rm -rf node_modules",
-        "rm-pkgs-and-lock": "rm -rf node_modules package-lock.json",
+        "rm-pkgs-and-lock": "npm run rm-pkgs -- package-lock.json",
         "update-deps": "npm run rm-pkgs-and-lock && ncu -u && npm i",
         "check": "tsc --noEmit",
         "release": "standard-version",
