--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "version": "0.0.0",
     "license": "Apache-2.0",
     "types": "esm/index.d.ts",
-    "module": "esm/index.js",
     "main": "cjs/index.js",
     "private": false,
     "publishConfig": {
@@ -23,20 +22,21 @@
     },
     "keywords": [],
     "devDependencies": {
-        "@swc-node/register": "^1.3.5",
-        "@swc/jest": "^0.2.4",
-        "@trivago/prettier-plugin-sort-imports": "^2.0.4",
+        "@swc-node/register": "^1.3.7",
+        "@swc/jest": "^0.2.5",
+        "@trivago/prettier-plugin-sort-imports": "^3.1.0",
         "@types/jest": "^27.0.2",
-        "@types/node": "^16.10.1",
+        "@types/node": "^16.11.6",
         "conditional-type-checks": "^1.0.5",
-        "jest": "^27.2.1",
-        "npm-check-updates": "^11.8.5",
+        "jest": "^27.3.1",
+        "npm-check-updates": "^12.0.0",
         "prettier": "^2.4.1",
-        "standard-version": "^9.3.1",
+        "standard-version": "^9.3.2",
+        "ts-node": "^10.4.0",
         "tslib": "^2.3.1",
-        "typedoc": "^0.22.4",
-        "typedoc-plugin-markdown": "^3.11.1",
-        "typescript": "^4.4.3"
+        "typedoc": "^0.22.7",
+        "typedoc-plugin-markdown": "^3.11.3",
+        "typescript": "^4.4.4"
     },
     "scripts": {
         "test": "jest",
@@ -48,6 +48,6 @@
         "check": "tsc --noEmit",
         "release": "standard-version",
         "release-next": "npm run release -- --prerelease next",
-        "example": "node -r @swc-node/register example"
+        "example": "SWC_NODE_PROJECT=.swcrc.json node -r @swc-node/register example"
     }
 }
