--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,12 +31,5 @@
         "useDefineForClassFields": true
     },
     "exclude": ["**/*.test.ts", "jest.config.ts", "node_modules"],
-    "include": ["jest.config.ts", "src"],
-    "ts-node": {
-        "transpileOnly": true,
-        "compilerOptions": {
-            "noUnusedLocals": false,
-            "noUnusedParameters": false
-        }
-    }
+    "include": ["jest.config.ts", "src"]
 }
